--- a/index.html
+++ b/index.html
@@ -148,7 +148,12 @@
       <nav
         class="max-w-7xl mx-auto flex items-center justify-between px-6 md:px-10 h-16"
       >
-        <a href="#" class="font-extrabold text-xl">OS Saúde</a>
+        <a href="#inicio" class="flex items-center space-x-2">
+          <img src="logo-os.png" alt="Logo OS Saúde" class="h-8 w-auto" />
+          <span class="font-extrabold text-xl hidden sm:inline-block"
+            >OS Saúde</span
+          >
+        </a>
         <ul class="hidden md:flex space-x-8 font-semibold">
           <li><a href="#inicio" class="hover:text-brand">Início</a></li>
           <li><a href="#missao" class="hover:text-brand">Missão</a></li>
@@ -198,6 +203,7 @@
               Otimizamos gestão de clínicas e consultórios para você focar no
               que importa: cuidar de pessoas.
             </p>
+            <img src="logo-os.png" alt="Logo OS Saúde" class="h-20 md:h-24" />
             <div class="flex flex-col sm:flex-row gap-4 pt-2">
               <a
                 href="#contato"
@@ -813,6 +819,7 @@
         class="relative z-10 max-w-7xl mx-auto px-6 md:px-10 grid md:grid-cols-4 gap-10"
       >
         <div>
+          <img src="logo-os.png" alt="Logo OS Saúde" class="h-20" />
           <h3 class="text-white text-xl font-extrabold mb-4">OS Saúde</h3>
           <p>Medicina Integrada com tecnologia e humanização.</p>
         </div>
