--- a/index.html
+++ b/index.html
@@ -203,7 +203,6 @@
               Otimizamos gestão de clínicas e consultórios para você focar no
               que importa: cuidar de pessoas.
             </p>
-            <img src="logo-os.png" alt="Logo OS Saúde" class="h-20 md:h-24" />
             <div class="flex flex-col sm:flex-row gap-4 pt-2">
               <a
                 href="#contato"
@@ -220,11 +219,11 @@
           <div class="lg:col-span-5 relative space-y-10">
             <div class="lift">
               <div
-                class="floating w-64 mx-auto rounded-3xl overflow-hidden border-8 border-[#1A1A1A] shadow-lg"
+                class="floating w-64 mx-auto rounded-3xl pr-2 overflow-hidden border-8 border-[#1A1A1A] shadow-lg"
               >
                 <img
-                  src="https://images.unsplash.com/photo-1579684385127-1ef15d508118?auto=format&fit=crop&w=600&q=80"
-                  alt="App OS Saúde"
+                  src="logo-os.png"
+                  alt="Logo OS Saúde"
                   class="h-96 w-full object-cover"
                 />
               </div>
@@ -306,7 +305,7 @@
             <p>Estados</p>
           </div>
           <div>
-            <div class="text-5xl font-display text-brand mb-2">96%</div>
+            <div class="text-5xl font-display text-brand mb-2">85%</div>
             <p>Satisfação</p>
           </div>
           <div>
@@ -398,7 +397,7 @@
             <div class="benef-card"><span>1</span>Redução de Custos</div>
             <div class="benef-card"><span>2</span>Mais Eficiência</div>
             <div class="benef-card"><span>3</span>Melhor Atendimento</div>
-            <div class="benef-card"><span>4</span>Dados Seguros</div>
+            <div class="benef-card"><span>4</span>Ótimo Atendimento</div>
           </div>
         </div>
       </section>
@@ -413,214 +412,201 @@
             <span class="text-brand">Oportunidades</span> em Destaque
           </h2>
 
-          <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 animate-fade-up">
-            <!-- CARD 1 -->
+          <div
+            class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 animate-fade-up items-stretch"
+          >
+            <!-- Exemplo de CARD -->
             <div
-              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift"
+              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
               style="animation-delay: 0s"
             >
               <div class="h-48 bg-red-100 flex items-center justify-center">
                 <i class="fas fa-crutch text-6xl text-red-600"></i>
               </div>
-              <div class="p-6">
-                <div class="flex justify-between mb-3">
-                  <h3 class="font-bold text-xl">Traumatologista</h3>
-                  <span
-                    class="bg-red-100 text-red-600 px-3 py-1 rounded-full text-sm"
-                    >SP</span
-                  >
+              <div class="p-6 flex flex-col justify-between flex-1">
+                <div>
+                  <div class="flex justify-between mb-3">
+                    <h3 class="font-bold text-xl">Traumatologista</h3>
+                    <span
+                      class="bg-red-100 text-red-600 px-3 py-1 rounded-full text-sm"
+                      >SP</span
+                    >
+                  </div>
+                  <p class="text-gray-600">
+                    Centro ortopédico busca especialista para pronto-socorro.
+                  </p>
                 </div>
-                <p class="text-gray-600 mb-4">
-                  Centro ortopédico busca especialista para pronto-socorro.
-                </p>
-                <div class="flex justify-between items-center">
-                  <span class="text-red-600 font-bold">R$ 30.000/mês</span
-                  ><a
-                    href="#contato"
-                    class="text-red-600 hover:text-red-800 font-medium"
-                    >Aplicar →</a
-                  >
-                </div>
+                <a
+                  href="#contato"
+                  class="mt-6 self-end text-red-600 hover:text-red-800 font-medium"
+                  >Aplicar →</a
+                >
               </div>
             </div>
 
-            <!-- CARD 2 -->
             <div
-              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift"
+              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
               style="animation-delay: 0.05s"
             >
               <div class="h-48 bg-indigo-100 flex items-center justify-center">
                 <i class="fas fa-tint text-6xl text-indigo-600"></i>
               </div>
-              <div class="p-6">
-                <div class="flex justify-between mb-3">
-                  <h3 class="font-bold text-xl">Urologista</h3>
-                  <span
-                    class="bg-indigo-100 text-indigo-600 px-3 py-1 rounded-full text-sm"
-                    >RJ</span
-                  >
+              <div class="p-6 flex flex-col justify-between flex-1">
+                <div>
+                  <div class="flex justify-between mb-3">
+                    <h3 class="font-bold text-xl">Urologista</h3>
+                    <span
+                      class="bg-indigo-100 text-indigo-600 px-3 py-1 rounded-full text-sm"
+                      >RJ</span
+                    >
+                  </div>
+                  <p class="text-gray-600">Clínica de referência contrata.</p>
                 </div>
-                <p class="text-gray-600 mb-4">
-                  Clínica de referência contrata para atendimento ambulatorial.
-                </p>
-                <div class="flex justify-between items-center">
-                  <span class="text-indigo-600 font-bold">R$ 27.000/mês</span
-                  ><a
-                    href="#contato"
-                    class="text-indigo-600 hover:text-indigo-800 font-medium"
-                    >Aplicar →</a
-                  >
-                </div>
+                <a
+                  href="#contato"
+                  class="mt-6 self-end text-indigo-600 hover:text-indigo-800 font-medium"
+                  >Aplicar →</a
+                >
               </div>
             </div>
 
-            <!-- CARD 3 -->
             <div
-              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift"
+              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
               style="animation-delay: 0.1s"
             >
               <div class="h-48 bg-green-100 flex items-center justify-center">
                 <i class="fas fa-baby text-6xl text-green-600"></i>
               </div>
-              <div class="p-6">
-                <div class="flex justify-between mb-3">
-                  <h3 class="font-bold text-xl">Pediatra</h3>
-                  <span
-                    class="bg-green-100 text-green-600 px-3 py-1 rounded-full text-sm"
-                    >MG</span
-                  >
+              <div class="p-6 flex flex-col justify-between flex-1">
+                <div>
+                  <div class="flex justify-between mb-3">
+                    <h3 class="font-bold text-xl">Pediatra</h3>
+                    <span
+                      class="bg-green-100 text-green-600 px-3 py-1 rounded-full text-sm"
+                      >MG</span
+                    >
+                  </div>
+                  <p class="text-gray-600">
+                    Hospital infantil amplia equipe para plantões e consultas.
+                  </p>
                 </div>
-                <p class="text-gray-600 mb-4">
-                  Hospital infantil amplia equipe para plantões e consultas.
-                </p>
-                <div class="flex justify-between items-center">
-                  <span class="text-green-600 font-bold">R$ 22.000/mês</span
-                  ><a
-                    href="#contato"
-                    class="text-green-600 hover:text-green-800 font-medium"
-                    >Aplicar →</a
-                  >
-                </div>
+                <a
+                  href="#contato"
+                  class="mt-6 self-end text-green-600 hover:text-green-800 font-medium"
+                  >Aplicar →</a
+                >
               </div>
             </div>
 
-            <!-- CARD 4 -->
             <div
-              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift"
+              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
               style="animation-delay: 0.15s"
             >
               <div class="h-48 bg-yellow-100 flex items-center justify-center">
                 <i class="fas fa-ear-listen text-6xl text-yellow-600"></i>
               </div>
-              <div class="p-6">
-                <div class="flex justify-between mb-3">
-                  <h3 class="font-bold text-xl">Otorrino</h3>
-                  <span
-                    class="bg-yellow-100 text-yellow-600 px-3 py-1 rounded-full text-sm"
-                    >PR</span
-                  >
+              <div class="p-6 flex flex-col justify-between flex-1">
+                <div>
+                  <div class="flex justify-between mb-3">
+                    <h3 class="font-bold text-xl">Otorrino</h3>
+                    <span
+                      class="bg-yellow-100 text-yellow-600 px-3 py-1 rounded-full text-sm"
+                      >PR</span
+                    >
+                  </div>
+                  <p class="text-gray-600">
+                    Clínica busca especialista para agenda.
+                  </p>
                 </div>
-                <p class="text-gray-600 mb-4">
-                  Clínica auditiva procura especialista para agenda lotada.
-                </p>
-                <div class="flex justify-between items-center">
-                  <span class="text-yellow-600 font-bold">R$ 24.000/mês</span
-                  ><a
-                    href="#contato"
-                    class="text-yellow-600 hover:text-yellow-800 font-medium"
-                    >Aplicar →</a
-                  >
-                </div>
+                <a
+                  href="#contato"
+                  class="mt-6 self-end text-yellow-600 hover:text-yellow-800 font-medium"
+                  >Aplicar →</a
+                >
               </div>
             </div>
 
-            <!-- CARD 5 -->
             <div
-              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift"
+              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
               style="animation-delay: 0.2s"
             >
               <div class="h-48 bg-teal-100 flex items-center justify-center">
                 <i class="fas fa-syringe text-6xl text-teal-600"></i>
               </div>
-              <div class="p-6">
-                <div class="flex justify-between mb-3">
-                  <h3 class="font-bold text-xl">Anestesista</h3>
-                  <span
-                    class="bg-teal-100 text-teal-600 px-3 py-1 rounded-full text-sm"
-                    >SC</span
-                  >
+              <div class="p-6 flex flex-col justify-between flex-1">
+                <div>
+                  <div class="flex justify-between mb-3">
+                    <h3 class="font-bold text-xl">Anestesista</h3>
+                    <span
+                      class="bg-teal-100 text-teal-600 px-3 py-1 rounded-full text-sm"
+                      >SC</span
+                    >
+                  </div>
+                  <p class="text-gray-600">
+                    Clínica procura Anestesistas para agenda.
+                  </p>
                 </div>
-                <p class="text-gray-600 mb-4">
-                  Equipe cirúrgica de alta complexidade contrata.
-                </p>
-                <div class="flex justify-between items-center">
-                  <span class="text-teal-600 font-bold">R$ 35.000/mês</span
-                  ><a
-                    href="#contato"
-                    class="text-teal-600 hover:text-teal-800 font-medium"
-                    >Aplicar →</a
-                  >
-                </div>
+                <a
+                  href="#contato"
+                  class="mt-6 self-end text-teal-600 hover:text-teal-800 font-medium"
+                  >Aplicar →</a
+                >
               </div>
             </div>
 
-            <!-- CARD 6 -->
             <div
-              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift"
+              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
               style="animation-delay: 0.25s"
             >
               <div class="h-48 bg-pink-100 flex items-center justify-center">
                 <i class="fas fa-person-pregnant text-6xl text-pink-600"></i>
               </div>
-              <div class="p-6">
-                <div class="flex justify-between mb-3">
-                  <h3 class="font-bold text-xl">Obstetra</h3>
-                  <span
-                    class="bg-pink-100 text-pink-600 px-3 py-1 rounded-full text-sm"
-                    >RS</span
-                  >
+              <div class="p-6 flex flex-col justify-between flex-1">
+                <div>
+                  <div class="flex justify-between mb-3">
+                    <h3 class="font-bold text-xl">Obstetra</h3>
+                    <span
+                      class="bg-pink-100 text-pink-600 px-3 py-1 rounded-full text-sm"
+                      >RS</span
+                    >
+                  </div>
+                  <p class="text-gray-600">
+                    Maternidade busca especialista para agenda.
+                  </p>
                 </div>
-                <p class="text-gray-600 mb-4">
-                  Maternidade de referência amplia corpo clínico.
-                </p>
-                <div class="flex justify-between items-center">
-                  <span class="text-pink-600 font-bold">R$ 26.000/mês</span
-                  ><a
-                    href="#contato"
-                    class="text-pink-600 hover:text-pink-800 font-medium"
-                    >Aplicar →</a
-                  >
-                </div>
+                <a
+                  href="#contato"
+                  class="mt-6 self-end text-pink-600 hover:text-pink-800 font-medium"
+                  >Aplicar →</a
+                >
               </div>
             </div>
 
-            <!-- CARD 7 -->
             <div
-              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift"
+              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
               style="animation-delay: 0.3s"
             >
               <div class="h-48 bg-purple-100 flex items-center justify-center">
                 <i class="fas fa-heart-pulse text-6xl text-purple-600"></i>
               </div>
-              <div class="p-6">
-                <div class="flex justify-between mb-3">
-                  <h3 class="font-bold text-xl">Ecografista</h3>
-                  <span
-                    class="bg-purple-100 text-purple-600 px-3 py-1 rounded-full text-sm"
-                    >BA</span
-                  >
+              <div class="p-6 flex flex-col justify-between flex-1">
+                <div>
+                  <div class="flex justify-between mb-3">
+                    <h3 class="font-bold text-xl">Ecografista</h3>
+                    <span
+                      class="bg-purple-100 text-purple-600 px-3 py-1 rounded-full text-sm"
+                      >BA</span
+                    >
+                  </div>
+                  <p class="text-gray-600">
+                    Clínica contrata para laudos e imagem.
+                  </p>
                 </div>
-                <p class="text-gray-600 mb-4">
-                  Clínica diagnóstica contrata para exames de imagem.
-                </p>
-                <div class="flex justify-between items-center">
-                  <span class="text-purple-600 font-bold">R$ 20.000/mês</span
-                  ><a
-                    href="#contato"
-                    class="text-purple-600 hover:text-purple-800 font-medium"
-                    >Aplicar →</a
-                  >
-                </div>
+                <a
+                  href="#contato"
+                  class="mt-6 self-end text-purple-600 hover:text-purple-800 font-medium"
+                  >Aplicar →</a
+                >
               </div>
             </div>
           </div>
@@ -704,7 +690,8 @@
               <div>
                 <div class="text-brand text-5xl mb-4">"</div>
                 <p class="text-lg mb-6">
-                  Agendamento online elevou a ocupação das agendas em 40 %.
+                  OS Saúde facilitou minha agenda, em municípios de fácil acesso
+                  e com ótimo suporte.
                 </p>
               </div>
               <div class="flex items-center mt-auto">
@@ -714,8 +701,8 @@
                   loading="lazy"
                 />
                 <div>
-                  <div class="font-bold">Dr. Carlos Menezes</div>
-                  <div class="text-sm text-gray-500">Pediatra – RJ</div>
+                  <div class="font-bold">Dr. André Rocha</div>
+                  <div class="text-sm text-gray-500">Clínico Geral – BA</div>
                 </div>
               </div>
             </div>
@@ -883,7 +870,7 @@
         [
           'fa-clinic-medical',
           'Gestão de Clínicas',
-          'Administração 360° para clínicas e consultórios.',
+          'Administração ampla, para clínicas e consultórios.',
         ],
         [
           'fa-video',
