--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             <p>Estados</p>
           </div>
           <div>
-            <div class="text-5xl font-display text-brand mb-2">85%</div>
+            <div class="text-5xl font-display text-brand mb-2">92%</div>
             <p>Satisfação</p>
           </div>
           <div>
@@ -343,9 +343,11 @@
               <span class="text-brand">Tecnologia</span> que Amplifica
             </h2>
             <p class="text-lg md:text-xl lg:text-2xl mb-8">
-              Nossa plataforma não substitui sua expertise — ela amplia. Suporte
-              diagnóstico em tempo real, analytics preditivo e recomendações
-              personalizadas em poucos cliques.
+              A OS Saúde é a parceira que entende o seu desafio como ninguém,
+              entrega soluções reais e mantém o foco no cuidado humano. A
+              tecnologia que usamos só existe para tornar tudo mais ágil, mas
+              quem faz a diferença de verdade é a nossa equipe, seus talentos e
+              o compromisso em colocar a vida no centro de tudo.
             </p>
             <div class="grid md:grid-cols-2 gap-6">
               <div
@@ -399,7 +401,9 @@
             <span class="text-stroke">04</span>
             <span class="text-brand">Benefícios</span> para Clientes
           </h2>
-          <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-4 text-center">
+          <div
+            class="grid grid-cols-2 gap-6 md:grid-cols-2 lg:grid-cols-4 text-center"
+          >
             <div class="benef-card"><span>1</span>Redução de Custos</div>
             <div class="benef-card"><span>2</span>Mais Eficiência</div>
             <div class="benef-card"><span>3</span>Melhor Atendimento</div>
@@ -419,11 +423,11 @@
           </h2>
 
           <div
-            class="grid md:grid-cols-2 lg:grid-cols-3 gap-8 animate-fade-up items-stretch"
+            class="flex flex-nowrap overflow-x-auto overflow-y-visible gap-6 snap-x snap-mandatory scroll-pl-6 md:grid md:grid-cols-2 lg:grid-cols-3 md:overflow-visible md:snap-none animate-fade-up items-stretch pb-8 pt-6"
           >
             <!-- Exemplo de CARD -->
             <div
-              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
+              class="min-w-[80%] min-h-[420px] snap-start md:min-w-0 border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
               style="animation-delay: 0s"
             >
               <div class="h-48 bg-red-100 flex items-center justify-center">
@@ -451,7 +455,7 @@
             </div>
 
             <div
-              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
+              class="min-w-[80%] min-h-[420px] snap-start md:min-w-0 border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
               style="animation-delay: 0.05s"
             >
               <div class="h-48 bg-indigo-100 flex items-center justify-center">
@@ -477,7 +481,7 @@
             </div>
 
             <div
-              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
+              class="min-w-[80%] min-h-[420px] snap-start md:min-w-0 border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
               style="animation-delay: 0.1s"
             >
               <div class="h-48 bg-green-100 flex items-center justify-center">
@@ -505,7 +509,7 @@
             </div>
 
             <div
-              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
+              class="min-w-[80%] min-h-[420px] snap-start md:min-w-0 border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
               style="animation-delay: 0.15s"
             >
               <div class="h-48 bg-yellow-100 flex items-center justify-center">
@@ -533,7 +537,7 @@
             </div>
 
             <div
-              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
+              class="min-w-[80%] min-h-[420px] snap-start md:min-w-0 border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
               style="animation-delay: 0.2s"
             >
               <div class="h-48 bg-teal-100 flex items-center justify-center">
@@ -561,7 +565,7 @@
             </div>
 
             <div
-              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
+              class="min-w-[80%] min-h-[420px] snap-start md:min-w-0 border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
               style="animation-delay: 0.25s"
             >
               <div class="h-48 bg-pink-100 flex items-center justify-center">
@@ -589,7 +593,7 @@
             </div>
 
             <div
-              class="border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
+              class="min-w-[80%] min-h-[420px] snap-start md:min-w-0 border border-gray-200 rounded-xl overflow-hidden hover:shadow-lg transition lift flex flex-col h-full"
               style="animation-delay: 0.3s"
             >
               <div class="h-48 bg-purple-100 flex items-center justify-center">
@@ -639,10 +643,12 @@
             <span class="text-stroke">06</span>
             <span class="text-brand">Histórias</span> de Sucesso
           </h2>
-          <div class="grid lg:grid-cols-3 gap-8">
+          <div
+            class="flex flex-nowrap overflow-x-auto overflow-y-visible gap-6 snap-x snap-mandatory scroll-pl-6 pb-8 pt-6 lg:grid lg:grid-cols-3 lg:overflow-visible lg:snap-none"
+          >
             <!-- CARD 1 -->
             <div
-              class="lift p-8 border rounded-3xl shadow-sm animate-fade-up flex flex-col justify-between min-h-[360px]"
+              class="lift min-w-[85%] snap-start lg:min-w-0 p-8 border rounded-3xl shadow-sm animate-fade-up flex flex-col justify-between min-h-[360px]"
             >
               <div>
                 <div class="text-brand text-5xl mb-4">"</div>
@@ -666,7 +672,7 @@
 
             <!-- CARD 2 -->
             <div
-              class="lift p-8 border rounded-3xl shadow-sm animate-fade-up flex flex-col justify-between min-h-[360px]"
+              class="lift min-w-[85%] snap-start lg:min-w-0 p-8 border rounded-3xl shadow-sm animate-fade-up flex flex-col justify-between min-h-[360px]"
               style="animation-delay: 0.1s"
             >
               <div>
@@ -690,7 +696,7 @@
 
             <!-- CARD 3 -->
             <div
-              class="lift p-8 border rounded-3xl shadow-sm animate-fade-up flex flex-col justify-between min-h-[360px]"
+              class="lift min-w-[85%] snap-start lg:min-w-0 p-8 border rounded-3xl shadow-sm animate-fade-up flex flex-col justify-between min-h-[360px]"
               style="animation-delay: 0.2s"
             >
               <div>
@@ -762,21 +768,30 @@
           <div class="scroll-reveal" style="transition-delay: 0.2s">
             <form
               class="bg-white border border-gray-200 p-8 rounded-3xl shadow-lg space-y-4"
-              onsubmit="event.preventDefault(); alert('Enviado com sucesso!')"
             >
               <h3 class="text-2xl font-bold mb-6">Formulário de Aplicação</h3>
+
               <input
                 type="text"
                 placeholder="Nome completo"
                 required
                 class="w-full bg-white border-b border-gray-300 py-3 px-4 focus:outline-none focus:border-brand"
               />
+
               <input
-                type="email"
-                placeholder="E-mail"
+                type="tel"
+                placeholder="Telefone (com DDD)"
                 required
                 class="w-full bg-white border-b border-gray-300 py-3 px-4 focus:outline-none focus:border-brand"
               />
+
+              <input
+                type="number"
+                placeholder="Idade"
+                required
+                class="w-full bg-white border-b border-gray-300 py-3 px-4 focus:outline-none focus:border-brand"
+              />
+
               <select
                 required
                 class="w-full bg-white border-b border-gray-300 py-3 px-4 focus:outline-none focus:border-brand text-gray-700"
@@ -789,11 +804,20 @@
                 <option>Ginecologia</option>
                 <option>Outros</option>
               </select>
+
               <input
-                type="number"
-                placeholder="Anos de experiência"
+                type="text"
+                placeholder="CRM (se aplicável)"
                 class="w-full bg-white border-b border-gray-300 py-3 px-4 focus:outline-none focus:border-brand"
               />
+
+              <input
+                type="text"
+                placeholder="Região (ex: São Paulo/SP)"
+                required
+                class="w-full bg-white border-b border-gray-300 py-3 px-4 focus:outline-none focus:border-brand"
+              />
+
               <button
                 type="submit"
                 class="w-full bg-brand hover:bg-brandDark text-white font-bold py-4 px-8 rounded-full transition-all mt-4"
@@ -904,6 +928,67 @@
         <p class="text-sm text-gray-600">${text}</p>
       </div>`,
         );
+      });
+    </script>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        const form = document.querySelector('form');
+        form.addEventListener('submit', e => {
+          e.preventDefault();
+
+          const nome = form.querySelector('input[placeholder="Nome completo"]');
+          const telefone = form.querySelector(
+            'input[placeholder="Telefone (com DDD)"]',
+          );
+          const idade = form.querySelector('input[placeholder="Idade"]');
+          const especialidade = form.querySelector('select');
+          const crm = form.querySelector('input[placeholder^="CRM"]');
+          const regiao = form.querySelector('input[placeholder^="Região"]');
+
+          let erros = [];
+
+          // Nome
+          if (nome.value.trim().length < 3) {
+            erros.push('Digite um nome válido.');
+          }
+
+          // Telefone (somente números, 10 ou 11 dígitos)
+          const tel = telefone.value.replace(/\D/g, '');
+          if (!/^\d{10,11}$/.test(tel)) {
+            erros.push('Telefone inválido. Use o formato com DDD.');
+          }
+
+          // Idade
+          const idadeVal = parseInt(idade.value);
+          if (isNaN(idadeVal) || idadeVal < 18 || idadeVal > 100) {
+            erros.push('Idade inválida. Precisa estar entre 18 e 100.');
+          }
+
+          // Especialidade
+          if (!especialidade.value || especialidade.selectedIndex === 0) {
+            erros.push('Selecione uma especialidade.');
+          }
+
+          // CRM (opcional, mas se tiver, deve ter pelo menos 4 números)
+          const crmVal = crm.value.trim();
+          if (crmVal !== '' && !/^\d{4,}$/.test(crmVal)) {
+            erros.push('CRM inválido. Mínimo 4 números.');
+          }
+
+          // Região
+          if (regiao.value.trim().length < 3) {
+            erros.push('Digite uma região válida.');
+          }
+
+          if (erros.length > 0) {
+            alert('Erros encontrados:\n\n- ' + erros.join('\n- '));
+            return;
+          }
+
+          // Se tudo OK
+          alert('Aplicação enviada com sucesso!');
+          form.reset();
+        });
       });
     </script>
   </body>
