Por que escolher a gente

--- a/index.html
+++ b/index.html
@@ -276,21 +276,26 @@
             class="lg:col-span-2 lift bg-white border border-gray-200 p-8 rounded-3xl shadow animate-fade-up"
           >
             <h3 class="text-2xl font-bold mb-4">Por que escolher a gente?</h3>
-            <ul class="space-y-3 text-sm">
+            <ul class="space-y-4 text-sm leading-relaxed">
               <li class="flex">
-                <span class="text-brand mr-3">✓</span>Suporte completo de
-                implantação &amp; treinamento
+                <span class="text-brand mr-3">✓</span>
+                Ajudamos do começo ao fim — com implantação e treinamento
+                completos
               </li>
               <li class="flex">
-                <span class="text-brand mr-3">✓</span>Infra cloud com SLA 99,9%
+                <span class="text-brand mr-3">✓</span>
+                Seu sistema no ar, sempre — com infraestrutura segura e garantia
+                de 99,9% de disponibilidade
               </li>
               <li class="flex">
-                <span class="text-brand mr-3">✓</span>BI clínico e financeiro
-                integrado
+                <span class="text-brand mr-3">✓</span>
+                Visualize tudo que importa — relatórios prontos com dados
+                financeiros e da clínica, em tempo real
               </li>
               <li class="flex">
-                <span class="text-brand mr-3">✓</span>Compliance LGPD de ponta a
-                ponta
+                <span class="text-brand mr-3">✓</span>
+                Seus dados protegidos de verdade — 100% em conformidade com a
+                LGPD
               </li>
             </ul>
           </div>
